# bingus-bot

./: .gitignore  BOTINFO.md  Cargo.toml  README.md
config/: assets.json  embeds.json  embeds.old.json  empty.json
src/: client.rs  config.rs  main.rs  util.rs
src/command/: admin.rs  data.rs  general.rs  imp.rs  mod.rs  owner.rs
