[package]
name = "bingus_bot"
version = "0.1.0"
authors = ["Factorial <27factorial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
futures = "0.3.13"
markov = "1.1.0"
serde_json = "1.0"
structopt = "0.3.21"
anyhow = "1.0.40"
chrono = "0.4"
crossbeam = "0.8.1"
itertools = "0.10.1"

[dependencies.serenity]
version = "0.10.7"
features = ["collector"]

[dependencies.tokio]
version = "1.2.0"
features = ["rt", "macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
